--- a/.github/workflows/daily-check.yml
+++ b/.github/workflows/daily-check.yml
@@ -75,6 +75,103 @@ jobs:
           git diff --since="24 hours ago" > .tmp/diff.patch || true
           echo "DIFF_BYTES=$(wc -c < .tmp/diff.patch | tr -d ' ')" >> $GITHUB_ENV
 
+      - name: Collect trafficlight stats
+        shell: bash
+        run: |
+          mkdir -p .tmp
+          python3 - << 'PY'
+          import datetime
+          import os
+          import pathlib
+          import re
+
+          base = pathlib.Path('.')
+          exclude = {'.git', '.github', 'node_modules', 'vendor', '.tmp'}
+
+          counts = {'green': 0, 'yellow': 0, 'red': 0}
+          red_files = []
+          next_review_items = []
+
+          today = datetime.date.today()
+          soon_threshold = today + datetime.timedelta(days=14)
+
+          for root, dirs, files in os.walk(base):
+            # prune excluded directories
+            dirs[:] = [d for d in dirs if d not in exclude and not d.startswith('.git')]
+            path_root = pathlib.Path(root)
+            if any(part in exclude for part in path_root.parts):
+              continue
+            for name in files:
+              if not name.lower().endswith('.md'):
+                continue
+              path = path_root / name
+              rel_path = path.relative_to(base)
+              try:
+                content = path.read_text(encoding='utf-8')
+              except Exception:
+                continue
+
+              lines = content.splitlines()
+              if not lines or lines[0].strip() != '---':
+                continue
+              frontmatter_end = None
+              for idx in range(1, len(lines)):
+                if lines[idx].strip() == '---':
+                  frontmatter_end = idx
+                  break
+              if frontmatter_end is None:
+                continue
+
+              frontmatter = '\n'.join(lines[1:frontmatter_end])
+              status_match = re.search(r'^status:\s*(\w+)', frontmatter, re.IGNORECASE | re.MULTILINE)
+              if not status_match:
+                continue
+
+              status = status_match.group(1).lower()
+              if status in counts:
+                counts[status] += 1
+              else:
+                continue
+
+              if status == 'red':
+                red_files.append(str(rel_path))
+
+              date_match = re.search(r'^next_review:\s*([0-9]{4}-[0-9]{2}-[0-9]{2})', frontmatter, re.IGNORECASE | re.MULTILINE)
+              if date_match:
+                try:
+                  date_value = datetime.date.fromisoformat(date_match.group(1))
+                except ValueError:
+                  date_value = None
+                if date_value and date_value <= soon_threshold:
+                  next_review_items.append((date_value, str(rel_path)))
+
+          red_files = red_files[:10]
+          next_review_items.sort(key=lambda x: x[0])
+          next_review_items = next_review_items[:10]
+
+          lines_out = ["## Светофор качества (YAML frontmatter)", ""]
+          total_marked = sum(counts.values())
+          if total_marked == 0:
+            lines_out.append("нет данных")
+          else:
+            lines_out.append(f"🟢 / 🟡 / 🔴: {counts['green']} / {counts['yellow']} / {counts['red']}")
+            lines_out.append("")
+            lines_out.append("### 🔴 На доработку")
+            if red_files:
+              lines_out.extend(f"- {path}" for path in red_files)
+            else:
+              lines_out.append("- нет данных")
+            lines_out.append("")
+            lines_out.append("### 📅 Ревизия скоро")
+            if next_review_items:
+              for date_value, path in next_review_items:
+                lines_out.append(f"- {date_value.isoformat()} — {path}")
+            else:
+              lines_out.append("- нет данных")
+
+          pathlib.Path('.tmp/trafficlight.md').write_text('\n'.join(lines_out) + '\n', encoding='utf-8')
+          PY
+
       - name: Generate summary via LLM
         id: llm
         continue-on-error: true
@@ -95,6 +192,7 @@ jobs:
 
           commits = pathlib.Path(".tmp/commits.txt").read_text(encoding="utf-8", errors="ignore")
           diff = pathlib.Path(".tmp/diff.patch").read_text(encoding="utf-8", errors="ignore")
+          trafficlight = pathlib.Path(".tmp/trafficlight.md").read_text(encoding="utf-8", errors="ignore") if pathlib.Path(".tmp/trafficlight.md").exists() else "нет данных"
 
           # Ограничим diff, чтобы не улететь в лимиты
           max_chars = 120_000
@@ -113,11 +211,20 @@ jobs:
           4) To-do на завтра (3–7 пунктов)
           5) Если коммитов нет — скажи, что изменений не было.
 
+          Светофор качества (данные ниже):
+          {trafficlight or "нет данных"}
+
           Коммиты:
           {commits or "нет"}
 
           Diff:
           {diff or "нет"}
+
+          Финальный ответ обязательно должен содержать раздел:
+          ## Светофор базы знаний
+          - строку с форматированием "🟢 / 🟡 / 🔴: X / Y / Z"
+          - блок "🔴 На доработку (топ-5)" со ссылками/путями (если данных нет, напиши "нет данных")
+          - блок "📅 Ревизия скоро (топ-5)" (если данных нет, напиши "нет данных")
           """
 
           # OpenAI Responses API (пример)
@@ -143,7 +250,7 @@ jobs:
                 text += c.get("text", "")
           text = text.strip() or "(LLM вернул пустой ответ)"
 
-          out = f"# Ежедневная сводка — {today}\n\n{text}\n"
+          out = f"# Ежедневная сводка — {today}\n\n{text}\n\n---\n\n{trafficlight}\n"
           pathlib.Path(".tmp/summary.md").write_text(out, encoding="utf-8")
           print("Wrote .tmp/summary.md")
           PY
@@ -187,7 +294,15 @@ jobs:
               echo '```'
               echo
               echo "Размер diff (байт): ${diff_size}"
+              echo
+              echo "---"
+              echo
+              cat .tmp/trafficlight.md 2>/dev/null || echo "нет данных"
             } > .tmp/summary.md
+          fi
+
+          if [ -s .tmp/trafficlight.md ] && ! grep -q "Светофор качества (YAML frontmatter)" .tmp/summary.md; then
+            printf "\n\n---\n\n%s\n" "$(cat .tmp/trafficlight.md)" >> .tmp/summary.md
           fi
 
       - name: Create Issue (daily summary)
